Add workaround to run eTrice with Java 17+
Adds a JVM flag that allows to run older eTrice versions (which use
Xtext 2.25) with Java 17+.
The flag is not necessary to run upcoming eTrice versions with a more
recent Xtext version.